[package]
name = "winit-block-on"
version = "0.2.0"
edition = "2018"
authors = ["John Nunley <dev@notgull.net>"]
license = "BSL-1.0 OR Apache-2.0"
description = "Block on a future using winit's event loop"
repository = "https://github.com/notgull/winit-block-on"
homepage = "https://github.com/notgull/winit-block-on"
documentation = "https://docs.rs/winit-block-on"

[dependencies]
pin-utils = "0.1.0"
winit = { version = "0.29" }

[dev-dependencies]
async-executor = "1.5.0"
async-h1 = "2.3.3"
async-io = "1.12.0"
async-rustls = "0.3.0"
blocking = "1.3.0"
bytemuck = "1.13.0"
event-listener = "2.5.3"
futures-lite = "1.12.0"
http-types = "2.12.0"
rustls = "0.20.8"
rusttype = "0.9.3"
rustybuzz = "0.5.0"
softbuffer = { version = "0.3", default-features = false, features = ["x11"] }
tiny-skia = "0.8.2"
tiny-skia-path = "0.8.2"
ttf-parser = "0.15.1"
webpki-roots = "0.22.6"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11"] }
